--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
 fastapi==0.100.0
 hypercorn==0.14.4
+pandas==1.4.2
+slowapi==0.1.6
+gunicorn==20.1.0
+python-dotenv==0.20.0
+prometheus_client==0.14.1
+sentry-sdk==1.5.10
+json-log-formatter==0.3.0
